--- a/src/Public/style.css
+++ b/src/Public/style.css
@@ -54,5 +54,62 @@ label.fingerAct:hover, input.fingerAct:hover+label, label.finger:active, input.f
 
 
 .nPrompt ul {
-    list-style-image: url("https://app.openpolice.org:8443/survloop/dot.png");
+    list-style-image: url("http://openpolicereport.org/survloop/dot.png");
 }
+
+
+.allegation, h1.allegation, h2.allegation, h3.allegation, h4.allegation, 
+a.allegation:link, a.allegation:visited, a.allegation:active, a.allegation:hover {
+	color: #ec2327;
+	font-size: bold;
+	/* text-shadow: 0px -1px 0px #f38c5f; */
+} /* ec2327  f38c5f */
+
+.goldLevel {
+	color: #fccb4f;
+	font-weight: bold;
+	text-shadow: 1px 1px 0px #000;
+}
+
+.volunChecklistWrap {
+	padding: 20px;
+	border: 1px #63c6ff dotted;
+	-moz-border-radius: 20px; border-radius: 20px;
+	font-size: 16pt;
+	line-height: 28px;
+}
+ol.volunChecklist {
+	
+}
+ol.volunChecklist li {
+	position: relative;
+	font-size: 16pt;
+	line-height: 28px;
+	padding-bottom: 25px;
+}
+ol.volunChecklist li b, .volunChecklistWrap b {
+	font-size: 110%;
+}
+ol.volunChecklist input {
+	position: absolute;
+	top: 3px;
+	left: -40px;
+}
+
+
+table.complaintTbl {
+	width: 100%;
+}
+table.complaintTbl tr th {
+	font-weight: bold;
+	border-bottom: 1px #63c6ff solid;
+}
+table.complaintTbl tr th, table.complaintTbl tr td {
+	padding: 5px;
+	text-align: left;
+	vertical-align: top;
+}
+table.complaintTbl tr td.botBrd {
+	border-bottom: 1px #bbe6ff dotted;
+}
+
